Page refreshing and frontend routing working
